# diptest

./: .clang-format  .gitattributes  CHANGELOG.md  CMakeLists.txt  README.md  mbuild.sh  pyproject.toml  setup.py
.github/workflows/: asan.yml  linux.yml  macos.yml  nonvendored_wheels.yml  openmp.yml  test_matrix.yml  valgrind.yml  wheels.yml  windows.yml
diptest/: consts.py  diptest.py
include/diptest/: diptest.hpp  pcg64.hpp  wrapper.hpp
src/: bindings.cpp  test_pcg.cpp  wrapper.cpp
src/diptest/: .diptest.py.un~  __init__.py  consts.py  diptest.py  iterative.py
src/diptest-core/include/: arena.hpp  iterative.hpp
src/diptest-core/include/diptest/: arena.hpp  bootstrap.hpp  common.hpp  dipstat.hpp  diptest.hpp  test_pcg.hpp
src/diptest-core/src/: bindings.cpp  bootstrap.cpp  dipstat.cpp  iterative.cpp  test_pcg.cpp  wrapper.cpp
tests/: test_diptest.py  test_internal.py  test_iterative.py
